# phonon

./: .gitignore  ACTUAL_WORKING_SYNTAX.md  ALL_FUNCTIONS_WITH_LINES.txt  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DISCUSSION.md  ARC_REFACTOR_FINAL_PUSH.md  ARC_REFACTOR_PROGRESS.md  ARC_REFACTOR_REALTIME_STATUS.md  ARC_REFACTOR_SESSION2_PROGRESS.md  ARC_REFACTOR_SESSION3_STATUS.md  ARC_REFACTOR_SESSION4_FINAL.md  ARC_REFACTOR_SESSION5_RESUME.md  ARC_REFACTOR_SESSION6_BUFFER_WAVES_COMPLETE.md  ARC_REFACTOR_SESSION6_COMPLETION.md  ARC_REFACTOR_SESSION6_SUMMARY.md  AUDIO_VERIFICATION_STATUS.md  AUDIO_VERIFICATION_STATUS_REPORT.md  AUTO_ROUTING_FIX_SUMMARY.md  BLOCK_PROCESSING_ANALYSIS.md  BRANCH_COMPARISON_AND_RECOMMENDATION.md  BUFFER_EVALUATION_REFACTOR.md  BUFFER_EVAL_STUDY.md  BUFFER_SIZE_IMPLEMENTATION.md  BUFFER_TEST_MIGRATION_REPORT.md  BUG_FIXES.md  BUG_INVESTIGATION_CONCLUSION.md  BUG_INVESTIGATION_FINAL.md  BUG_REPORT.md  BUS_FEEDBACK_ANALYSIS.md  CLAUDE.md  CLI_ACTUAL_STATUS.md  COMPLETE_EXAMPLE.phonon  COMPRESSOR_IMPLEMENTATION_COMPLETE.md  CRITICAL_EVALUATION.md  CRITICAL_GAP_ANALYSIS.md  Cargo.toml  DATAFLOW_ARCHITECTURE.md  DATAFLOW_CONTEXT_UPDATE_STATUS.md  DATAFLOW_FINAL_STATUS.md  DATAFLOW_KNOWN_ISSUES.md  (+503 more)
benches/: voice_simd_bench.rs
boson/: IMPLEMENTATION_SUMMARY.md  PHONON_CODING_GUIDE.md  boson-pattern.js  boson-real.js  boson-strudel.js  boson.js  count-ops.js  debug-euclid.js  debug-juno.js  debug-off.js  debug.js  debug2.js  mini-parser.js  package-lock.json  package.json  parser.js  pattern.js  patterns.phonon  test-advanced.js  test-all.js  test-core.js  test-framework.js  test-more.js  test-note-freq.js  test-notes.js  test-random.js  test-sample-index.js  test-signals.js  test-time.js
demos/: afrobeat.ph  afrobeat.phonon  ambient.phonon  ambient_idm.ph  bossa.phonon  breakbeat.ph  dnb.phonon  dnb_patterns.ph  dub_reggae.ph  groove_showcase.ph  hiphop.phonon  hiphop_trap.ph  house.ph  house.phonon  house_patterns.ph  jazz.ph  jazz.phonon  minimal_techno.ph  reggae.phonon  rock.phonon  techno.phonon  techno_patterns.ph  uk_garage.ph
docs/: AMBIENT_IDM_RESEARCH.md  ARCHITECTURAL_REVIEW.md  AUDIO_FINGERPRINTING_RESEARCH.md  AUDIO_RATE_MODULATION_ROADMAP.md  AUDIO_RATE_PROOF.md  BREAKBEAT_JUNGLE_RESEARCH.md  BUFFER_SIZE_CONFIGURATION.md  BUS_PATTERNS.md  BUS_REFERENCE_BUG_INVESTIGATION.md  CHEATSHEET.typ  COMPLETE_TIDAL_OPERATORS.md  COMPLETION_IMPLEMENTATION_DECISIONS.md  COMPLETION_IMPROVEMENT_PLAN.md  CRITICAL_BUGS.md  DELAY_REVERB_IMPLEMENTATION_COMPLETE.md  DESIGN_DAW_STYLE_BUFFER_PASSING.md  DIFFUSER_IMPLEMENTATION.md  DOCUMENTATION_AND_PUBLISHING.md  DOCUMENTATION_STRATEGY_FUTURE.md  DOC_COMMENT_SPEC.md  DSL_GAPS_DISCOVERED.md  DUB_REGGAE_PATTERNS.md  DnB_PATTERN_RESEARCH.md  E2E_TEST_PLAN.md  EFFECTS_IMPLEMENTATION_STATUS.md  EMACS_INTEGRATION_PLAN.md  ENVELOPE_FINDINGS.md  ENVELOPE_IMPLEMENTATION_AND_NEXT_STEPS.md  FDN_REVERB_IMPLEMENTATION.md  FEATURE_REVIEW_AND_GAP_ANALYSIS.md  FEEDBACK_PATTERNS.md  FEEDBACK_ROUTING.md  FFT_TEST_AUDIT.md  FIXING_PROGRESS.md  FUNDSP_CHORUS_STUDY.md  FUNDSP_MOOG_HZ_STUDY.md  FUNDSP_NOISE_STUDY.md  FUNDSP_PINK_STUDY.md  FUNDSP_PULSE_HZ_STUDY.md  FUNDSP_REVERB2_STEREO_STUDY.md  (+126 more)
evaluations/: closeout-confirm-full.md  fix-pre-existing-8.md
examples/: 120bpm_beat.ph  120bpm_beat.phonon  LIVE_CODING_ENVELOPE_SOLUTION.md  actual_working_beat.rs  ad_demo.ph  additive_demo.ph  adsr_demo.ph  amp_follower_demo.ph  asr_demo.ph  auto_pan_demo.rs  brown_noise_demo.ph  buffer_size_demo.sh  chord_progression.ph  clamp_demo.rs  comb_demo.ph  compare_euclid.rs  complete_operator_demo.rs  convolution_demo.ph  correct_beat.ph  correct_beat.ph.bak  correct_beat.phonon  cps_tempo_demo.rs  curve_demo.ph  debug_complex_drum.rs  debug_drum_beat.rs  debug_edge_cases.rs  debug_envelope.rs  debug_lph.rs  debug_pattern_events.rs  debug_peak_detection.rs  debug_raw_audio.rs  debug_rhythm_pattern.rs  debug_saw.rs  debug_sine_generation.rs  debug_tidal.ph  debug_tidal.ph.bak  debug_tidal.phonon  delay_node_example.rs  demo_beat.rs  demo_cps.rs  (+178 more)
examples_verified/: 01_simple_tone.ph  02_pattern_modulation.ph  03_sample_playback.ph  04_lfo_filter.ph  05_complete_mix.ph
fermion/: Cargo.toml  fermion-bin
fermion/src/: audio.rs  engine.rs  main.rs  server.rs  synth.rs  synth_defs.rs
phonemes/: a.ph  ambient_pad.ph  b.ph  c.ph  demo.ph  drum_kit.ph  e.ph  filter_test.ph  getting_started.ph  hihat_pattern.ph  house_beat.ph  house_real.ph  house_tidal.ph  l.ph  live.ph  m.ph  piano.ph  q.ph  rhythm_test.ph  simple_melody.ph  t.ph  test_100_voices.ph  test_200_voices.ph  test_250_voices_sustained.ph  test_all_chords.ph  test_benchmark_extreme.ph  test_chord.ph  test_finish_simple.ph  test_gain_modifier.ph  test_letter_notes.ph  test_no_n.ph  (+12 more)
(+1056 files in other folders)
