[package]
name = "phonon"
version = "0.1.0"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
description = "Phonon: A Rust-based live coding language combining TidalCycles patterns with modular synthesis"

[dependencies]
libc = "0.2"
# Audio synthesis
fundsp = "0.18"
glicol = "0.13"
biquad = "0.4"  # High-quality IIR filters (lowpass, highpass, bandpass, notch)

# Audio output - cross-platform (JACK, ALSA, OpenSL ES on Android)
cpal = "0.15"

# Lock-free atomic Arc swapping for live mode
arc-swap = "1.7"

# Lock-free ring buffer for audio streaming
ringbuf = "0.4"

# MIDI support
midir = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# OSC support
rosc = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"  # Binary serialization for IPC
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Audio file generation
hound = "3.5"

# Random for sample generation
rand = "0.8"

# Hashing for deterministic pattern testing
sha2 = "0.10"

# Lazy static for musical constants
lazy_static = "1.4"

# High-performance parser combinators
nom = "7.1"

# Terminal UI for live coding interface
ratatui = "0.24"
crossterm = "0.27"

# File watching for hot-reload
notify = "6.1"

# Audio analysis for testing
rustfft = "6.1"
realfft = "3.3"  # Real-valued FFT for spectral processing
num-complex = "0.4"  # Complex numbers for FFT
spectrum-analyzer = "1.7"
audio-processor-analysis = "2.4"
audio-processor-traits = "4.3"

# System directories
dirs = "5.0"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"  # Lock-free channels for thread pool
num_cpus = "1.16"  # CPU count detection
core_affinity = "0.8"  # Thread pinning for performance

# Graph algorithms for DAW-style audio processing
petgraph = "0.6"  # Topological sort, dependency analysis

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "wav_analyze"
path = "src/bin/wav_analyze.rs"

[[bench]]
name = "voice_simd_bench"
harness = false

[profile.release]
debug = true

